Trying to fix ipv6 by forcing rtpproxy

--- a/kamailio.cfg
+++ b/kamailio.cfg
@@ -816,8 +816,9 @@ route[NATMANAGE] {
 			}
 		}
 	}
-	if (!(isflagset(FLT_NATS) || isbflagset(FLB_NATB)))
-		return;
+# Always RTP proxy for now
+#	if (!(isflagset(FLT_NATS) || isbflagset(FLB_NATB)))
+#		return;
 
 	rtpproxy_manage("co");
 
@@ -958,12 +959,15 @@ branch_route[MANAGE_BRANCH] {
 # Manage incoming replies
 onreply_route[MANAGE_REPLY] {
 	xdbg("incoming reply\n");
-	if(status=~"[12][0-9][0-9]")
+	if(status=~"[12][0-9][0-9]") {
+		route(IPV4V6);
 		route(NATMANAGE);
+	}
 }
 
 # Manage failure routing cases
 failure_route[MANAGE_FAILURE] {
+	route(IPV4V6);
 	route(NATMANAGE);
 
 	if (t_is_canceled()) {
