--- a/kamailio.cfg
+++ b/kamailio.cfg
@@ -38,9 +38,7 @@
 #
 # *** To enable nat traversal execute:
 #     - define WITH_NAT
-#     - install RTPProxy: http://www.rtpproxy.org
-#     - start RTPProxy:
-#        rtpproxy -l _your_public_ip_ -s udp:localhost:7722
+#     - install RTPEngine
 #     - option for NAT SIP OPTIONS keepalives: WITH_NATSIPPING
 #
 # *** To enable PSTN gateway routing execute:
@@ -287,7 +285,7 @@ loadmodule "presence_xml.so"
 
 #!ifdef WITH_NAT
 loadmodule "nathelper.so"
-loadmodule "rtpproxy.so"
+loadmodule "rtpengine.so"
 #!endif
 
 #!ifdef WITH_TLS
@@ -442,8 +440,8 @@ modparam("presence_xml", "force_active", 1)
 
 
 #!ifdef WITH_NAT
-# ----- rtpproxy params -----
-modparam("rtpproxy", "rtpproxy_sock", "udp:127.0.0.1:7722")
+# ----- rtpegine params -----
+modparam("rtpengine", "rtpengine_sock", "udp:127.0.0.1:60000")
 
 # ----- nathelper params -----
 modparam("nathelper", "natping_interval", 30)
@@ -820,7 +818,7 @@ route[NATMANAGE] {
 #	if (!(isflagset(FLT_NATS) || isbflagset(FLB_NATB)))
 #		return;
 
-	rtpproxy_manage("co");
+	rtpengine_manage("replace-origin replace-session-connection");
 
 	if (is_request()) {
 		if (!has_totag()) {
