Adding force-relay to the rtpengine_manage() call to force relaying of SDP media for VATRP-2609

--- a/kamailio.cfg
+++ b/kamailio.cfg
@@ -818,7 +818,7 @@ route[NATMANAGE] {
 #	if (!(isflagset(FLT_NATS) || isbflagset(FLB_NATB)))
 #		return;
 
-	rtpengine_manage("replace-origin replace-session-connection");
+	rtpengine_manage("replace-origin replace-session-connection force-relay");
 
 	if (is_request()) {
 		if (!has_totag()) {
