--- a/kamailio.cfg
+++ b/kamailio.cfg
@@ -66,6 +66,9 @@
 #     - define WITH_XMLRPC
 #     - adjust route[XMLRPC] for access policy
 #
+# *** To enable websocket transport
+#     - define WITH_WEBSOCKETS
+#
 # *** To enable the embedded http server:
 #     - define WITH_XHTTP
 #
@@ -305,6 +308,10 @@ loadmodule "xmlrpc.so"
 loadmodule "debugger.so"
 #!endif
 
+#!ifdef WITH_WEBSOCKETS
+loadmodule "websocket.so"
+#!endif
+
 #!ifdef WITH_XHTTP
 loadmodule "xhttp.so"
 #!endif
@@ -440,7 +447,7 @@ modparam("presence_xml", "force_active", 1)
 
 
 #!ifdef WITH_NAT
-# ----- rtpegine params -----
+# ----- rtpengine params -----
 modparam("rtpengine", "rtpengine_sock", "udp:127.0.0.1:60000")
 
 # ----- nathelper params -----
@@ -565,8 +572,34 @@ request_route {
 	route(RELAY);
 }
 
+route[SETUP_BY_TRANSPORT] {
+
+	if ($ru =~ "transport=ws") {
+		xlog("L_INFO", "Request going to WS");
+		if(sdp_with_transport("RTP/SAVPF")) {
+			rtpengine_manage("force trust-address replace-origin replace-session-connection ICE=force");
+			t_on_reply("REPLY_WS_TO_WS");
+			return;
+		}
+		rtpengine_manage("force trust-address replace-origin replace-session-connection ICE=force RTP/SAVPF");
+		t_on_reply("REPLY_FROM_WS");
+	}
+	else if ($proto =~ "ws") {
+		xlog("L_INFO", "Request coming from WS");
+		rtpengine_manage("force trust-address replace-origin replace-session-connection ICE=remove RTP/AVP");
+		t_on_reply("REPLY_TO_WS");
+	}
+	else {
+		xlog("L_INFO", "This is a classic phone call");
+		rtpengine_manage("replace-origin replace-session-connection");
+		t_on_reply("MANAGE_CLASSIC_REPLY");
+	}
+}
+
 
 route[RELAY] {
+
+	route(SETUP_BY_TRANSPORT);
 
 	# enable additional event routes for forwarded requests
 	# - serial forking, RTP relaying handling, a.s.o.
@@ -633,6 +666,19 @@ route[WITHINDLG] {
 	# sequential request withing a dialog should
 	# take the path determined by record-routing
 	if (loose_route()) {
+#!ifdef WITH_WEBSOCKETS
+		if (nat_uac_test(64)) {
+			# Do NAT traversal stuff for replies to a WebSocket connection
+			# - even if it is not behind a NAT!
+			# This won't be needed in the future if Kamailio and the
+			# WebSocket client support Outbound and Path.
+			if (!add_contact_alias()) {
+				xlog("L_ERR", "Error aliasing contact <$ct>\n");
+				sl_send_reply("400", "Bad Request");
+				exit;
+			}
+		}
+#!endif
 		route(DLGURI);
 		if (is_method("BYE")) {
 			setflag(FLT_ACC); # do accounting ...
@@ -791,12 +837,20 @@ route[AUTH] {
 route[NATDETECT] {
 #!ifdef WITH_NAT
 	force_rport();
-	if (nat_uac_test("19")) {
+	if (nat_uac_test("83")) {
 		if (is_method("REGISTER")) {
 			fix_nated_register();
 		} else {
-			if(is_first_hop())
+			fix_nated_contact();
+			if(is_first_hop()) {
 				set_contact_alias();
+			} else {
+				if (!add_contact_alias()) {
+					xlog("L_ERR", "Error aliasing contact <$ct>\n");
+					sl_send_reply("400", "Bad Request");
+					exit;
+				}
+			}
 		}
 		setflag(FLT_NATS);
 	}
@@ -957,6 +1011,7 @@ branch_route[MANAGE_BRANCH] {
 # Manage incoming replies
 onreply_route[MANAGE_REPLY] {
 	xdbg("incoming reply\n");
+
 	if(status=~"[12][0-9][0-9]") {
 		route(IPV4V6);
 		route(NATMANAGE);
@@ -993,6 +1048,8 @@ failure_route[MANAGE_FAILURE] {
 # Handling HTTP events
 #!ifdef WITH_XHTTP
 event_route[xhttp:request] {
+	set_reply_close();
+	set_reply_no_connect();
 #!ifdef WITH_XHTTP_RPC
 	$var(xhttp_rpc_root) = $(hu{s.substr,0,9});
 	if ($var(xhttp_rpc_root) == "/http_rpc") {
@@ -1005,8 +1062,79 @@ event_route[xhttp:request] {
 		dispatch_xhttp_pi();
 	}
 #!endif
-	xhttp_reply("200", "OK", "text/html",
+#!ifdef WITH_WEBSOCKETS
+	if ($hdr(Upgrade)=~"websocket" && $hdr(Connection)=~"Upgrade" && $rm=~"GET") {
+
+		# Validate Host - make sure the client is using the correct
+		# alias for WebSockets
+		if ($hdr(Host) == $null || !is_myself("sip:" + $hdr(Host))) {
+			xlog("L_WARN", "Bad host $hdr(Host)\n");
+			xhttp_reply("403", "Forbidden", "", "");
+			exit;
+		}
+
+		if (ws_handle_handshake())
+		{
+			# Optional... cache some information about the
+			# successful connection
+			exit;
+		}
+	}
+#!endif
+	xhttp_reply("404", "Not Found", "text/html",
 		"<html><body>Wrong URL $hu</body></html>");
+}
+#!endif
+
+#!ifdef WITH_WEBSOCKETS
+
+event_route[websocket:closed] {
+	xlog("L_INFO", "WebSocket connection from $si:$sp has closed\n");
+}
+
+onreply_route[REPLY_TO_WS] {
+	xlog("L_INFO", "REPLY_TO_WS - Reply to SIP: $rs");
+
+	if (t_check_status("183")) {
+		change_reply_status("180", "Ringing");
+		remove_body();
+		exit;
+	}
+
+	if(!(status=~"[12][0-9][0-9]"))
+		return;
+
+	rtpengine_manage("force trust-address replace-origin replace-session-connection ICE=force RTP/SAVPF");
+
+	route(NATMANAGE);
+}
+
+onreply_route[REPLY_FROM_WS] {
+	xlog("L_INFO", "REPLY_FROM_WS - Reply from webrtc client: $rs");
+
+	if(status=~"[12][0-9][0-9]") {
+		rtpengine_manage("force trust-address replace-origin replace-session-connection ICE=remove RTP/AVP");
+		route(NATMANAGE);
+	}
+}
+
+
+onreply_route[MANAGE_CLASSIC_REPLY] {
+	xlog("L_INFO", "MANAGE_CLASSIC_REPLY - Reply from SIP: $rs");
+
+	if(status=~"[12][0-9][0-9]") {
+		rtpengine_manage("replace-origin replace-session-connection");
+		route(NATMANAGE);
+	}
+}
+
+
+onreply_route[REPLY_WS_TO_WS] {
+	xlog("L_INFO", "REPLY_WS_TO_WS - Reply from webrtc client to webrtc client: $rs");
+	if(status=~"[12][0-9][0-9]") {
+		rtpengine_manage("force trust-address replace-origin replace-session-connection ICE=force");
+		route(NATMANAGE);
+	}
 }
 #!endif
 
